--- a/style.css
+++ b/style.css
@@ -4,46 +4,59 @@
   color: #333;
   font-family: lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header__img {
   width: 100%;
 }
+
 .header .more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header { text-align: center;
+
+  .header { 
+    text-align: center;
+  }
+
 }
-}
+
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .input {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .row-wrapper {
   display: flex;
 }
+
 .list {
   margin:0;
   padding: 0px;
 }
+
 .list__item {
   list-style:none;
 }
+
 .input,.btn,.checkbox{
   outline:none;
 }
+
 .btn {
   background: none;
   border: 0px;
@@ -53,9 +66,11 @@
   font-family: lato, sans-serif;
   cursor: pointer;
 }
+
 .btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .section-header {
   color: #333;
@@ -66,6 +81,7 @@
   margin: 0;
   text-transform: uppercase;
 }
+
 .input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -78,6 +94,7 @@
   font-family: lato, sans-serif;
   color: #888;
 }
+
 .input[type="text"]:focus {
   color: #333;
 }
@@ -87,6 +104,7 @@
   display: block;
   margin: 0 0 20px;
 }
+
 #add-item__input {
   width: 318px;
 }
@@ -101,6 +119,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .list__item > * {
   vertical-align: middle;
 }
@@ -108,20 +127,24 @@
 .list__item > .checkbox[type="checkbox"] {
   margin: 0 10px;
 }
+
 .list__item > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .list__item >    .input[type="text"] {
   width: 226px
 }
+
 .btn.del-btn .btn__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .btn.del-btn .btn__img:hover {
   transform: rotateZ(0);
 }
