--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .input {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .row-wrapper {
@@ -136,7 +136,7 @@
 }
 
 .list__item >    .input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .btn.del-btn .btn__img {
@@ -151,18 +151,18 @@
 
 /* Completed */
 .list#completed-tasks .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list .list__item .input[type="text"] {
-  display: none
+  display: none;
 }
 
 .list .list__item.edit-mode .input[type="text"] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list .list__item.edit-mode .label {
